# TIE

./: .gitignore  MATLAB_COMPARISON_GUIDE.md  MOBILENET_TESTING.md  QUICKSTART.md  README.md  RSVD_HARDWARE_GUIDE.md  compile_report.sh  matlab_compare_results.m  matlab_debug_tensor.m  matlab_generate_test.m  matlab_mobilenet_test.m  matlab_verify_reconstruction.m  python_extract_mobilenet.py  run_comparison.sh
cmodel/: CMakeLists.txt  compact_inference_scheme.cpp  processing_schedule_elimination.cpp  tt_debug_test.cpp  tt_matlab_compare.cpp  tt_rsvd.cpp  tt_rsvd.h  tt_rsvd_test.cpp
include/: compact_inference_scheme.h  processing_schedule_elimination.h
systemc/: RSA.h
vtuber/verilog/dtype/: vint.h
weight_compress/: README.md  compressed_core.pt  extract_mobilenetv2_weights.py  td_tensorly.py  td_tensorlytorch.py  tt_decompose.m
weight_compress/layers_weights_tensor_cores/: classifier_1_cores.pt
